ghc/compiler/tests/typecheck/should_fail/tcfail029.hs
--!!! tests for InstOpErr

data Foo = Bar | Baz

f x = x > Bar
